fix: quote box overflow (vertical direction)

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 html, body, #root {
   width: 100%;
   height: 100%;
-  max-height: 100%;
 }
 
 #wrapper {
@@ -17,7 +16,6 @@ html, body, #root {
   width: 100%;
   height: auto;
   min-height: 100%;
-  max-height: 100%;
 }
 
 #quote-box {
